--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "private": true,
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "jimp": "^0.16.1",
+    "multer": "^1.4.2",
     "tesseract.js": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
