--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,5 +18,13 @@ services:
       - ./server:/usr/src
       - server_nm:/usr/src/node_modules
 
+  client:
+    image: lobsterbandit/dev-golang:edge
+    container_name: wowclassic-bg-ocr-client-dev
+    tty: true
+    working_dir: /usr/src
+    volumes:
+      - .:/usr/src
+
 volumes:
   server_nm:
