Add out flag to specify capture write location

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -8,7 +8,9 @@
     "--disable",
     "gochecknoglobals",
     "--disable",
-    "gochecknoinits"
+    "gochecknoinits",
+    "--disable",
+    "godot"
   ],
   "go.vetOnSave": "package",
   "[go]": {
